--- a/css/style.css
+++ b/css/style.css
@@ -2034,3 +2034,11 @@ footer .form-subscribe .form-control:active, footer .form-subscribe .form-contro
   color: #2d63c8;
   background-color: #ffffff;
 }
+
+.logo-img {
+  max-height: 60px;     /* Adjust this size as needed */
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  display: block;
+}
