--- a/css/scss/bootstrap/_variables.scss
+++ b/css/scss/bootstrap/_variables.scss
@@ -66,7 +66,7 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       #ff896b !default;
+$primary: #6b77ff !default;
 $secondary:     #263f44 !default;
 $success:       $green !default;
 $info:          $cyan !default;
